--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
     },
     "python.testing.pytestArgs": [
         //"-s", "--log-cli-level=DEBUG", // uncomment for more debug logging in pytest
-        "--pciaddr=XXXX:BB:DD.F"         // BDF address of the DUT. >>> Backup your data! <<<
+        "--pciaddr=0000:01:00.0"         // BDF address of the DUT. >>> Backup your data! <<<
     ],
     "python.pythonPath": "python3",
     "python.testing.unittestEnabled": false,
@@ -20,5 +20,6 @@
     "terminal.integrated.shell.linux": "/bin/bash",
     "editor.minimap.enabled": false,
     "editor.detectIndentation": false,
-    "terminal.integrated.fontSize": 12
+    "terminal.integrated.fontSize": 12,
+    "restructuredtext.confPath": "${workspaceFolder}/spdk/dpdk/doc/guides"
 }
